<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/formLay"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        

       

        

        
<EditText
            android:id="@+id/lastNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_last_name"
             />

        <EditText
            android:id="@+id/firstNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
             />

        <EditText
            android:id="@+id/Score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/score"
            android:inputType="number" 
            />
        <Button
            android:id="@+id/SaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
        
        <Button
            android:id="@+id/BackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"/>
        
        <Button
            android:id="@+id/DisplayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display_scores"/>
        
        <TextView 
            android:id="@+id/scoresTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
            
            
            
            
                    
    </LinearLayout>

</LinearLayout>
